porMIgrar-do/otium.xyz3/B/kubernetes/namespaceServiciosWeb/05-ingressroutes.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: secured
  #namespace: webpages
spec:
  chain:
    middlewares:
    - name: https-only
---
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-only
  #namespace: webpages
spec:
  redirectScheme:
    scheme: https
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute
  #namespace: webpages
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`www.otium.xyz`)
    middlewares:
    - name: https-only
    kind: Rule
    services:
    - name: wordpress
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls
  #namespace: webpages
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`www.otium.xyz`)
    kind: Rule
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: default

---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressroute2
  #namespace: webpages
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`otium.xyz`)
    middlewares:
    - name: https-only
    kind: Rule
    services:
    - name: wordpress
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetls2
  #namespace: webpages
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`otium.xyz`)
    kind: Rule
    services:
    - name: wordpress
      port: 80
  tls:
    certResolver: default

#OSTICKET    
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: simpleingressrouteosticket
  #namespace: webpages
spec:
  entryPoints:
    - web
  routes:
  - match: Host(`ticket.otium.xyz`)
    middlewares:
    - name: https-only
    kind: Rule
    services:
    - name: osticket
      port: 80
---
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: ingressroutetlsosticket
  #namespace: webpages
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`ticket.otium.xyz`)
    kind: Rule
    services:
    - name: osticket
      port: 80
  tls:
    certResolver: default
